--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "client-install": "npm install --prefix client",
     "client-build": "npm run build --prefix client",
-    "server": "nodemon server.js",
+    "server": "nodemon --exec babel-node --presets env,stage-2 server.js",
     "client": "npm start --prefix client",
     "dev": "concurrently \"npm run server\" \"npm run client\""
   },
@@ -14,12 +14,28 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@babel/preset-react": "^7.0.0",
+    "babel-cli": "^6.26.0",
+    "babel-plugin-transform-decorators-legacy": "^1.3.5",
+    "babel-preset-env": "^1.7.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-stage-2": "^6.24.1",
+    "babel-register": "^6.26.0",
+    "eslint-plugin-react": "^7.11.1",
     "nodeman": "^1.1.2"
   },
   "dependencies": {
+    "bcrypt-nodejs": "0.0.3",
     "concurrently": "^3.6.1",
+    "cookie-parser": "^1.4.3",
+    "email-validator": "^2.0.4",
     "express": "^4.16.3",
+    "express-session": "^1.15.6",
     "jsonwebtoken": "^8.3.0",
-    "mongoose": "^5.2.7"
+    "mongoose": "^5.2.7",
+    "passport": "^0.4.0",
+    "passport-jwt": "^4.0.0",
+    "password-sheriff": "^1.1.0",
+    "react-cookie": "^3.0.4"
   }
 }
